[package]
name = "mqtt-publisher"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }
serde = { version = "1.0", features = ["derive", "std"] }
rumqttc = "0.8"
serde_json = "1.0"